--- a/BootcampKodFun/gun4/gonderi.html
+++ b/BootcampKodFun/gun4/gonderi.html
@@ -7,5 +7,6 @@
   </head>
   <body>
     <h1>Teşekkürler, mesajınız alındı</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, unde!</p>
   </body>
 </html>
