float, layout, font

--- a/BootcampKodFun/gun8/kutular.html
+++ b/BootcampKodFun/gun8/kutular.html
@@ -53,6 +53,7 @@
       <div style="background-color: #7d2727">Kutu 8</div>
       <div style="background-color: #c31c1c">Kutu 9</div>
       <div style="background-color: #ef0b0b">Kutu 10</div>
+      <!-- Son Div'in altına Bir float temizleyici konur -->
     </main>
   </body>
 </html>
