--- a/BootcampKodFun/gun11/position2.html
+++ b/BootcampKodFun/gun11/position2.html
@@ -22,6 +22,7 @@
         position: relative;
       }
 
+      /* resmi tam ortalamak için */
       .uzunAgac {
         position: absolute;
         left: calc(50% - 50px);
