--- a/BootcampKodFun/gun24/dizidenTabloya.html
+++ b/BootcampKodFun/gun24/dizidenTabloya.html
@@ -8,10 +8,16 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css"
     />
+    <style>
+      h1,
+      table {
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
     <div class="container">
-      <h1 class="mt-4">Öğrenciler</h1>
+      <h1 class="mt-4">Öğrenciler:</h1>
       <table class="table table-striped">
         <thead>
           <tr>
