--- a/BootcampKodFun/gun22/arrays.html
+++ b/BootcampKodFun/gun22/arrays.html
@@ -11,7 +11,7 @@
       // Diziler/Arrays
       // Diziler, bir veya daha fazla veri türünü depolayan bir veri yapısı
 
-      let apartman = ["betül", "güneş", "metin", "burak"];
+      let apartman = ["betül", "güneş", "metin", "burak", "yumurta"];
       // (bunu apartman olarak düşünelim, 0. katta betiül, 1. katta gümeş, 2.katta metin ve 3. kattta da burak var)
       yaz("Apartmandaki kat sayısı (Dizinin uzunluğu): " + apartman.length);
       yaz("Apartrman sakinleri (Dizi elemanları): " + apartman.toString());
