--- a/BootcampKodFun/gun25/DomElementiOlusturma.html
+++ b/BootcampKodFun/gun25/DomElementiOlusturma.html
@@ -32,6 +32,11 @@
       const cizgi = document.createElement("hr");
       baslik.after(cizgi);
 
+      const res = document.createElement("img");
+      res.src = "https://www.w3schools.com/w3images/workshop.jpg";
+      res.width = 300;
+      document.body.append(res);
+
       //  developer tolls üzerinden elementi seç ve properties sekmesinde kontrol et
       // baslik.
     </script>
